# BaliKinetics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/examples/: kinematics_demo.cpp
